2001-06-09  Chris Cocosco  <crisco@bic.mni.mcgill.ca>

	* MNI/Spawn.pm (set_undefined_option): also try main::$varname if
	the calling package doesn't define/export $varname (bugfix for
	MNI/Batch.pm::JobStatus)

2001-02-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Batch.pm (GetJobid): New.  Returns ID of currently-open job.

	* MNI.pm: Set VERSION to 0.07.

	* MNI/Batch.pm (JobStatus): New.  Return status of job, as
	determined by "baq".

2000-09-22  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/TagSet.pm (new): option name is `comment' not `comments'.
	(get_point): bugfix; used `grep' where should have used `map'.
	Localize all usages of `$_'.

2000-09-19  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/TagSet.pm:
	* MNI/TagPoint.pm: new.  Future replacement of MNI::Tag.
	A TagSet corresponds to a `.tag' file; it holds a list of
	TagPoint objects.  The TagPoint objects allow read access to
	all fields in the tag.

	* t/tag.t: new.  Exercise the MNI::TagSet.

2000-09-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Tag.pm: add POD documentation of all user-level functions.

2000-04-11  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Tag.pm (_volume): change diagnostics.

2000-03-13  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* MNI/Batch.pm (StartJob): don't clear entire set of SyncFiles,
	only the ones corresponding to the PID of the starting job.
	(Synchronize): fix bug that prevented counting number of outstanding
	jobs; reported by Jason Lerch.

	* t/batch-2.t: new.  Test Synchronize() function.

2000-02-21  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI/Startup.pm (startup): if TMPDIR is not defined, check for /usr/tmp,
	/var/tmp, and /tmp; use the first directory found for TmpDir.

Sun Jan 16 15:37:54 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* MNI.pm: bump VERSION to 0.06.

Sun Jan 16 15:16:02 2000  Steve Robbins  <steve@nyongwa.montreal.qc.ca>
